--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           <h1>
             <a href="index.html">
               <!-- 記載番号：1 -->
-              <span class="header__logo-title">Tech Taro</span>
+              <span class="header__logo-title">Yudai Ishiyama</span>
               <span class="header__logo-sub">Portfolio</span>
             </a>
           </h1>
