--- a/index.html
+++ b/index.html
@@ -39,43 +39,22 @@
             <div class="firstview__info">
               <h2>
                 <!-- 記載番号：2 -->
-                <span class="firstview__info-name">テック 太郎</span>
+                <span class="firstview__info-name">石山 雄大</span>
                 <!-- 記載番号：3 -->
-                <span class="firstview__info-name-sm">Tech Taro</span>
+                <span class="firstview__info-name-sm">Ishiyama Yudai</span>
               </h2>
               <ul class="firstview__info-origin-list">
                 <!-- 記載番号：4 -->
-                <li class="firstview__info-origin-item">19xx年x月x日生まれ</li>
+                <li class="firstview__info-origin-item">1996年12月31日生まれ</li>
                 <!-- 記載番号：5 -->
-                <li class="firstview__info-origin-item">東京都出身</li>
+                <li class="firstview__info-origin-item">熊本県出身</li>
               </ul>
               <ul class="firstview__info-account-list">
                 <li class="firstview__info-account-item">
-                  <!-- 記載番号：6 -->
-                  <a href="__URL__" target="_blank">
-                    <img src="./images/icon-firstview-info-qiita.svg" class="firstview__info-account-pict">
-                    <span  class="firstview__info-account-name">Qiita</span>
-                  </a>
-                </li>
-                <li class="firstview__info-account-item">
                   <!-- 記載番号：7 -->
-                  <a href="__URL__" target="_blank">
+                  <a href="https://github.com/yudaiishiyama" target="_blank">
                     <img src="./images/icon-firstview-info-github.svg" class="firstview__info-account-pict">
                     <span  class="firstview__info-account-name">github</span>
-                  </a>
-                </li>
-                <li class="firstview__info-account-item">
-                  <!-- 記載番号：8 -->
-                  <a href="__URL__" target="_blank">
-                    <img src="./images/icon-firstview-info-twitter.svg" class="firstview__info-account-pict">
-                    <span  class="firstview__info-account-name">Twitter</span>
-                  </a>
-                </li>
-                <li class="firstview__info-account-item">
-                  <!-- 記載番号：9 -->
-                  <a href="__URL__" target="_blank">
-                    <img src="./images/icon-firstview-info-blog.svg" class="firstview__info-account-pict">
-                    <span  class="firstview__info-account-name">blog</span>
                   </a>
                 </li>
               </ul>
@@ -87,10 +66,9 @@
             </div>
             <ul class="firstview__point-list">
               <!-- 記載番号：10 -->
-              <li class="firstview__point-item">5年の営業経験で培った課題解決スキル×プログラミングスキル</li>
+              <li class="firstview__point-item">3年の接客経験で培った問題解決力×プログラミングスキル</li>
               <li class="firstview__point-item">プログラミング学習時は、学習進捗が早く1週間前倒しで学習終了</li>
-              <li class="firstview__point-item">オリジナルアプリとして趣味共有SNSを開発</li>
-              <li class="firstview__point-item">アウトプットとして技術系のブログを1日1回以上発信中</li>
+              <li class="firstview__point-item">オリジナルアプリとして温泉共有SNSを開発</li>
             </ul>
           </div>
         </div>
@@ -104,13 +82,19 @@
             <!-- 記載番号：11 -->
             <div class="profile__text-area">
               <p>
-                大学卒業後、2016年4月より都内の電子機器メーカーにて営業として勤務。業務の中で様々なツールがIT化されていること、しかしなかなかその恩恵を受けている人が少ないことに気づき、エンジニアという職への興味を持ちました。
+                大学卒業後、2019年4月より熊本の旅館にて仲居、フロントとして勤務。業務の中で様々な業務がIT化されていないことに気づき、エンジニアという職への興味を持ちました。
               </p>
               <p> 
-                私のモットーは「何事にも主体性を持って臨むこと」です。前職で担当していたある製品の販促プロジェクトは、まだ新卒入社間もない頃に自ら手を挙げて担当させていただくことになりました。様々なクライアントと接してニーズを調査し、それらを販促に活かすようにしてきました。クライアントからの細かな要望についても、自分ごととして考えることで、多くの信頼を得ることができました。
+                前職では、旅館で接客の仕事に勤めており、コミュニケーション力がとても必要な仕事でしたが、私自身がそのスキルが不得意なことが課題でした。何を話せばお客様が満足するのか。どんな話し方がいいのか。全くわからない状態でした。そこで私は自分自身に必要な事は情報と話し方だと仮説を立てました。
               </p>
               <p>
-                私は、あまねく業務を効率化し、人々がいきいきと働く世の中を作ることが目標です。クライアントと接する中で、様々な業務に追われている方々を見てきました。世の中には様々な効率化ツールがあるにも関わらず、使い方が難しいなどの理由でなかなか導入に至っていないケースが散見されました。そこで、私はどのような人でも使いやすく、ユーザーにとってやさしいプロダクトを作っていきたいと考えています。そこで私は、日々の学習の中で様々なツールに触れることを大切にしています。そこから得たアイディアを、日々のオリジナルアプリ開発に活かすようにしています。
+                情報とはその地域にしかない美味しい食べ物や場所を表します。これをお客様の目線に合わせて提案する。その為、休日はお店などに実際に赴き、そこでの情報をメモして伝える情報を整理してました。その知識をもとに、お客様に合わせて提案を試みました。話し方については社内の中で一番話し方ができる人に言葉遣いを聞いてみたり、話し方を真似てみることから始めました。
+              </p>
+              <p>
+                結果として、話すことが得意でない私にとって情報は会話に繋がりができ、その提案がよければお客様に満足感を与えることができる。お客様から感謝の言葉を頂くこともありました。
+              </p>
+              <p>
+                相手目線で提案するは接客に限らず、エンジニアにおいても大切なことだと考えているので、現場では相手目線で課題解決に繋がるプロダクトを作っていきたいと考えています。
               </p>
             </div>
           </div>
@@ -142,12 +126,12 @@
               <!-- 記載番号：15 -->
               <li class="skill__item">
                 <h3>データベース・インフラ</h3>
-                <h4>MySQL / AWS / Heroku</h4>
+                <h4>MySQL / AWS / Render / Heroku</h4>
               </li>
               <!-- 記載番号：16 -->
               <li class="skill__item">
                 <h3>その他</h3>
-                <h4>GitHub / Slack / Trello</h4>
+                <h4>GitHub / Slack / </h4>
                 <p>
                   こちらは開発等で使用しているツールです。
                 </p>
@@ -159,7 +143,7 @@
             <p>
               2021年よりプログラミングスクールでRuby on Railsを中心に学習を開始しました。現在のスキル感について詳細は以下の制作実績をご覧ください。
               <br>
-              各領域を比較すると特にフロントエンドの開発に興味があり、現在はReactおよびVue.jsを学習しています。
+              各領域を比較すると特にバックエンドの開発に興味があり、現在はJavaを学習しています。
             </p>
           </div>
         </div>
@@ -170,32 +154,32 @@
             <h2>WORKS<span>実績</span></h2>
           </div>
           <div class="contents">
-            <ul class="works__list">
+            <!-- <ul class="works__list">
               <li class="works__item">
-                <div class="works__item-pict">
+                <div class="works__item-pict"> -->
                   <!-- images/01に配置した、FURIMAの画像（PC版）のパスを記載する -->
-                  <a href="works/01.html" style="background-image:url('./images/work/01/pict-work01-firstview_pc.jpg');"></a>
+                  <!-- <a href="works/01.html" style="background-image:url('./images/work/01/pict-work01-firstview_sp2.png');"></a>
                 </div>
-                <div class="works__item-text-block">
+                <div class="works__item-text-block"> -->
                   <!-- 記載番号：18 -->
-                  <h3>FURIMA（フリマアプリ）</h3>
+                  <!-- <h3>FURIMA（フリマアプリ）</h3> -->
                   <!-- 記載番号：19 -->
-                  <p>Ruby / Ruby on Rails / MySQL / GitHub / Heroku / Visual Studio Code / Trello</p>
+                  <!-- <p>Ruby / Ruby on Rails / MySQL / GitHub / Render / Visual Studio Code / Trello</p>
                 </div>
                 <div class="works__item-btn-block">
                   <a href="works/01.html" class="button">More</a>
-                </div>
+                </div> -->
               </li>
               <li class="works__item">
                 <div class="works__item-pict">
                   <!-- images/02に配置した、オリジナルアプリの画像（PC版）のパスを記載する -->
-                  <a href="works/02.html" style="background-image:url('./images/work/02/pict-work02-firstview_pc.jpg');"></a>
+                  <a href="works/02.html" style="background-image:url('./images/work/02/pict-work02-firstview_sp2.png');"></a>
                 </div>
                 <div class="works__item-text-block">
                   <!-- 記載番号：20 -->
-                  <h3>HOBCHA（趣味共有SNS）</h3>
+                  <h3>yumegurism</h3>
                   <!-- 記載番号：21 -->
-                  <p>Ruby / Ruby on Rails / MySQL / GitHub / Heroku / Visual Studio Code / Trello</p>
+                  <p>Ruby / Ruby on Rails / MySQL / GitHub / Render / Visual Studio Code / Trello</p>
                 </div>
                 <div class="works__item-btn-block">
                   <a href="works/02.html" class="button">More</a>
@@ -207,7 +191,7 @@
       </section>
     </main>
     <!-- 記載番号：1 -->
-    <footer id="footer" class="footer"><p>&copy; Taro Tech.</p></footer>
+    <footer id="footer" class="footer"><p>&copy; Yudai Ishiyama.</p></footer>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>
     <script type="text/javascript" src="js/ofi.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
