--- a/works/01.html
+++ b/works/01.html
@@ -11,7 +11,7 @@
     <header id="header" class="header">
       <div class="header__logo">
           <h1>
-            <a href="../">
+            <a href="file:///Users/ishiyamayudai/projects/portfolio-site/index.html">
               <!-- 記載番号：1 -->
               <span class="header__logo-title">Yudai Ishiyama</span>
               <span class="header__logo-sub">Portfolio</span>
@@ -36,16 +36,16 @@
           <h2>FURIMA（フリマアプリ）</h2>
           <div class="p-work-firstview__pict obj-fit-img">
             <!-- images/01に配置した、FURIMAの画像（PC版）のパスを記載する -->
-            <img src="../images/work/01/pict-work01-firstview_pc.jpg" class="show-pc">
+            <img src="../images/work/01/pict-work01-firstview_sp2.png" class="show-pc">
             <!-- images/01に配置した、FURIMAの画像（SP版）のパスを記載する -->
-            <img src="../images/work/01/pict-work01-firstview_sp.jpg" class="show-sp">
+            <img src="../images/work/01/pict-work01-firstview_sp2.png" class="show-sp">
           </div>
           <div class="p-work-firstview__text-area">
             <h3 class="p-work-firstview__text-titile">開発環境</h3>
             <!-- 記載番号：3 -->
-            <p class="p-work-firstview__text">Ruby / Ruby on Rails / MySQL / GitHub / Heroku / Visual Studio Code / Trello</p>
+            <p class="p-work-firstview__text">Ruby / Ruby on Rails / MySQL / GitHub / Render / Visual Studio Code / Trello</p>
             <!-- 記載番号：4 -->
-            <p class="p-work-firstview__text-link"><a href="__URL__" target="_blank">https://github.com/XXXXXX/xxxxxx</a></p>
+            <p class="p-work-firstview__text-link"><a href="__URL__" target="_blank">https://github.com/yudaiishiyama/furima-38009</a></p>
           </div>
         </div>
       </section>
@@ -158,24 +158,6 @@
                 </div>
               </div>
             </li>
-            <li class="p-work-about__item">
-              <h3>今後実装したいと思っていること</h3>
-              <div class="p-work-about__item-block p-work-about__item-block-2column">
-                <div class="p-work-about__item-block-pict obj-fit-img">
-                  <!-- images/01に配置した、記載内容を表す画像のパスを記載する -->
-                  <img src="../images/work/01/pict-work01-about-dammy.jpg">
-                </div>
-                <!-- 記載番号：16 -->
-                <div class="p-work-about__item-block-text">
-                  <p>
-                    すでに実装済みのコメント投稿機能に、画像を投稿できるようにしたいと考えています。
-                  </p>
-                  <p>
-                    フリマアプリにおける購入者と出品者のやり取りについては、商品の状態についてのコミュニケーションが多く行われています。したがって、そのコミュニケーションがより円滑になるように、画像とともに商品の状態を説明できるようにしたいと考えています。
-                  </p>
-                </div>
-              </div>
-            </li>
           </ul>
         </div>
       </section>
@@ -189,13 +171,13 @@
               <li class="p-work-others__item">
                 <div class="p-work-others__item-pict">
                   <!-- images/01に配置した、FURIMAの画像（PC版）のパスを記載する -->
-                  <a href="01.html" style="background-image:url('../images/work/01/pict-work01-firstview_pc.jpg');"></a>
+                  <a href="01.html" style="background-image:url('../images/work/01/pict-work01-firstview_sp2.png');"></a>
                 </div>
                 <div class="p-work-others__item-text-block">
                   <!-- 記載番号：15 -->
                   <h3>FURIMA（フリマアプリ）</h3>
                   <!-- 記載番号：16 -->
-                  <p>Ruby / Ruby on Rails / MySQL / GitHub / Heroku / Visual Studio Code / Trello</p>
+                  <p>Ruby / Ruby on Rails / MySQL / GitHub / Render / Visual Studio Code / Trello</p>
                 </div>
                 <div class="p-work-others__item-btn-block">
                   <a href="01.html" class="button">More</a>
@@ -204,13 +186,13 @@
               <li class="p-work-others__item">
                 <div class="p-work-others__item-pict">
                   <!-- images/02に配置した、オリジナルアプリの画像（PC版）のパスを記載する -->
-                  <a href="02.html" style="background-image:url('../images/work/02/pict-work02-firstview_pc.jpg');"></a>
+                  <a href="02.html" style="background-image:url('../images/work/02/pict-work02-firstview_sp2.png');"></a>
                 </div>
                 <div class="p-work-others__item-text-block">
                   <!-- 記載番号：17 -->
-                  <h3>HOBCHA（趣味共有SNS）</h3>
+                  <h3>yumegurism</h3>
                   <!-- 記載番号：18 -->
-                  <p>Ruby / Ruby on Rails / MySQL / GitHub / Heroku / Visual Studio Code / Trello</p>
+                  <p>Ruby / Ruby on Rails / MySQL / GitHub / Render / Visual Studio Code / Trello</p>
                 </div>
                 <div class="p-work-others__item-btn-block">
                   <a href="02.html" class="button">More</a>
@@ -222,7 +204,7 @@
       </section>
     </main>
     <!-- 記載番号：1 -->
-    <footer id="footer" class="footer"><p>&copy; Taro Tech.</p></footer>
+    <footer id="footer" class="footer"><p>&copy; Yudai Ishiyama.</p></footer>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>
     <script type="text/javascript" src="../js/ofi.min.js"></script>
     <script type="text/javascript" src="../js/script.js"></script>
