--- a/works/02.html
+++ b/works/02.html
@@ -11,9 +11,9 @@
     <header id="header" class="header">
       <div class="header__logo">
           <h1>
-            <a href="../">
+            <a href="file:///Users/ishiyamayudai/projects/portfolio-site/index.html">
               <!-- 記載番号：1 -->
-              <span class="header__logo-title">Tech Taro</span>
+              <span class="header__logo-title">Yudai Ishiyama</span>
               <span class="header__logo-sub">Portfolio</span>
             </a>
           </h1>
@@ -33,19 +33,19 @@
       <section class="p-work-firstview">
         <div class="section-inner">
           <!-- 記載番号：2（記載番号2は5行目にもあるので気をつけてください） -->
-          <h2>HOBCHA（趣味共有SNS）</h2>
+          <h2>yumegurism</h2>
           <div class="p-work-firstview__pict obj-fit-img">
             <!-- images/02に配置した、オリジナルアプリの画像（PC版）のパスを記載する -->
-            <img src="../images/work/02/pict-work02-firstview_pc.jpg" class="show-pc">
+            <img src="../images/work/02/pict-work02-firstview_sp2.png" class="show-pc">
             <!-- images/02に配置した、オリジナルアプリの画像（SP版）のパスを記載する -->
-            <img src="../images/work/02/pict-work02-firstview_sp.jpg" class="show-sp">
+            <img src="../images/work/02/pict-work02-firstview_sp2.png" class="show-sp">
           </div>
           <div class="p-work-firstview__text-area">
             <h3 class="p-work-firstview__text-titile">開発環境</h3>
             <!-- 記載番号：3 -->
-            <p class="p-work-firstview__text">Ruby / Ruby on Rails / MySQL / GitHub / Heroku / Visual Studio Code / Trello</p>
+            <p class="p-work-firstview__text">Ruby / Ruby on Rails / MySQL / GitHub / Render / Visual Studio Code / Trello</p>
             <!-- 記載番号：4 -->
-            <p class="p-work-firstview__text-link"><a href="__URL__" target="_blank">https://github.com/XXXXXX/xxxxxx</a></p>
+            <p class="p-work-firstview__text-link"><a href="__URL__" target="_blank">https://github.com/yudaiishiyama/onsen-app</a></p>
           </div>
         </div>
       </section>
@@ -58,12 +58,12 @@
                 <tr>
                   <th>制作時間</th>
                   <!-- 記載番号：5 -->
-                  <td>70時間</td>
+                  <td>90時間</td>
                 </tr>
                 <tr>
                   <th>URL</th>
                   <!-- 記載番号：6 -->
-                  <td><a href="__URL__" target="_blank">http://hoge.heroku.com</a></td>
+                  <td><a href="https://onsenapp-1231.onrender.com" target="_blank">https://onsenapp-1231.onrender.com</a></td>
                 </tr>
                 <tr>
                   <th>ID</th>
@@ -73,7 +73,7 @@
                 <tr>
                   <th>PASS</th>
                   <!-- 記載番号：8 -->
-                  <td>2222</td>
+                  <td>3993</td>
                 </tr>
               </table>
             </li>
@@ -84,12 +84,12 @@
                 <tr>
                   <th>mail</th>
                   <!-- 記載番号：9 -->
-                  <td>test_user@hoge.com</td>
+                  <td>Yuki@gmail.com</td>
                 </tr>
                 <tr>
                   <th>PASS</th>
                   <!-- 記載番号：10 -->
-                  <td>testuser1234</td>
+                  <td>Yuki1231</td>
                 </tr>
               </table>
             </li>
@@ -105,18 +105,18 @@
             <!-- 記載番号：11 -->
             <div class="p-work-outline__text">
               <p>
-                オリジナルアプリケーションとして、自身の趣味を共有をするSNSを開発しました。
+                オリジナルアプリケーションとして、温泉を共有をするSNSを開発しました。
                 <br>
-                主な機能は、ユーザー登録機能、および趣味のジャンルごとのタイムライン機能、タグ付け機能です。
+                主な機能は、ユーザー登録機能、行った温泉の投稿機能、コメント機能、いいね機能です。
               </p>
               <p>
-                トップページにアクセスすると、様々な趣味のジャンルについて表示されています。それをクリックすると、そのジャンルにおけるタイムライン機能を閲覧することができます。
+                トップページにアクセスすると、アプリの使い方、どういう方に向けて作成したかについて確認することができます。
               </p>
               <p>
-                ユーザー登録をすると、それらのタイムラインに自身の投稿をすることができます。画像を添付することや、YouTubeのリンクを埋め込むことができます。YouTubeの動画については、タイムライン上で再生することができます。
+                ユーザー登録をすると、それらのタイムラインに自身の投稿をすることができます。画像を添付することや、行った温泉地をGoogleマップで表示することができます。
               </p>
               <p>
-                また、投稿をする際はタグ付け（ハッシュタグ）をすることができ、ハッシュタグをクリックすると同一のハッシュタグを持つ投稿のみを閲覧することができます。
+                また、ユーザー同士がコミュニュケーションをとる機能として、コメント・いいねをすることができます。
               </p>
             </div>
           </div>
@@ -130,13 +130,13 @@
               <!-- 記載番号：12 -->
               <div class="p-work-about__item-block">
                 <p>
-                  普段SNSを利用している中で、効率的に情報に接することができていないと課題に感じることがありました。
+                  私自身、日帰り温泉に行ったり、旅館にたまに泊まりにいくことがあります。その際に評価であったり、雰囲気で行く場所を決めています。
                 </p>
                 <p>
-                  私はサッカー観戦が趣味で、特にイングランドのプレミアリーグの情報をSNSで収集します。しかし、サッカーのジャンルは広く、フォローをしている他のユーザーは他のリーグの情報や、サッカーとは関係のない情報を共有するためそれらの情報がノイズに感じることがありました。またハッシュタグのみでジャンルを管理すると、必ずしも全員がハッシュタグをつけるわけではないので、情報の網羅性に欠けると感じています。
+                  ネットで探してみると 情報量が多く、決めかねることが多々あります。
                 </p>
                 <p>
-                  そこで、5ちゃんねるなどの掲示板の仕組みを参考に、テーマがカテゴライズされたSNSを作成したいと考えました。
+                  知りたい情報をすぐに得ることができるコンパクトなアプリケーションがあったら便利と考えこのアプリを制作することにしました。
                 </p>
               </div>
             </li>
@@ -145,41 +145,24 @@
               <div class="p-work-about__item-block p-work-about__item-block-2column">
                 <div class="p-work-about__item-block-pict obj-fit-img">
                   <!-- images/02に配置した、記載内容を表す画像のパスを記載する -->
-                  <img src="../images/work/02/pict-work02-about-dammy.jpg">
+                  <img src="../images/work/02/pict-work02-about.png">
                 </div>
                 <!-- 記載番号：13 -->
                 <div class="p-work-about__item-block-text">
                   <p>
-                    1つ目が本アプリケーションのポイントである趣味ジャンルのカテゴライズ機能です。カテゴリー管理にはancestryというRuby gemを用い、複数改装で管理できるようにしました。また、カテゴリーを各々が作成できる機能を設けました。しかし、これにはある課題が生じ、現在は機能を取り外しています。詳細は後述します。
+                    1.ユーザーが得たい情報を得れるか<br>
+                    ・詳細ページからGoogleマップ、泉質、温泉の紹介文を記入するように実装しました。<br>
+                    ・一覧ページからは画像がすぐに見えるように配置しました。
                   </p>
                   <p>
-                    2つ目がタイムラインのUIです。スマートフォンブラウザでの利用を考え、「スマホで見やすい」「スマホでタップしやすい」をテーマにマークアップを行い実装しました。
+                    2.ユーザーが楽しんでもらうため<br>
+                    ・温泉のシズル感を出したデザイン（背景を温泉の湯気、色をイメージ）して実装しました。<br>
+                    ・コメントを入力、削除、いいね機能の回数の表示をして他のユーザーからの評価が見えるように実装しました。
                   </p>
                   <p>
-                    いずれも、知人20名ほどに実際に利用してもらい、ユーザーヒアリングを行いながら改善を行っています。
-                  </p>
-                </div>
-              </div>
-            </li>
-            <li class="p-work-about__item">
-              <h3>今後実装したいと思っていること</h3>
-              <div class="p-work-about__item-block p-work-about__item-block-2column">
-                <div class="p-work-about__item-block-pict obj-fit-img">
-                  <!-- images/02に配置した、記載内容を表す画像のパスを記載する -->
-                  <img src="../images/work/02/pict-work02-about-dammy.jpg">
-                </div>
-                <!-- 記載番号：14 -->
-                <div class="p-work-about__item-block-text">
-                  <p>
-                    ActiveAdminなどを用いて、管理機能を設けたいと考えています。理由は2つあります。
-                  </p>
-                  <p>
-                    1つ目が、SNSというサービスの特性上、不適切な投稿を削除できるようにしておく必要があるためです。
-                  </p>
-                  <p>
-                    2つ目が、趣味ジャンルの修正追加を容易に行うためです。前述のとおり、ユーザーにカテゴリーを作成する機能を設けていましたが削除をしました。これは、ユーザーが好き勝手にカテゴリーを登録できてしまうと、重複の可能性があるためです。
-                    <br>
-                    そこで、ユーザーに要望フォーム形式で修正追加したいカテゴリーを投稿をしてもらい、運営側で追加する仕組みを考えています。その運用を実現するために管理機能が必要であると考えています。
+                    3.ユーザー目線を考えた実装<br>
+                    ・レスポンシブデザインを実装し、スマホでも使いやすいように実装しました。<br>
+                    ・ランディングページを作り、機能をあらかじめ説明することによって使ってみたくなるよう構成。
                   </p>
                 </div>
               </div>
@@ -194,31 +177,31 @@
           </div>
           <div class="contents">
             <ul class="p-work-others__list">
-              <li class="p-work-others__item">
-                <div class="p-work-others__item-pict">
+              <!-- <li class="p-work-others__item">
+                <div class="p-work-others__item-pict"> -->
                   <!-- images/01に配置した、FURIMAの画像（PC版）のパスを記載する -->
-                  <a href="01.html" style="background-image:url('../images/work/01/pict-work01-firstview_pc.jpg');"></a>
+                  <!-- <a href="01.html" style="background-image:url('../images/work/01/pict-work01-firstview_pc.jpg');"></a>
                 </div>
-                <div class="p-work-others__item-text-block">
+                <div class="p-work-others__item-text-block"> -->
                   <!-- 記載番号：15 -->
-                  <h3>FURIMA（フリマアプリ）</h3>
+                  <!-- <h3>FURIMA（フリマアプリ）</h3> -->
                   <!-- 記載番号：16 -->
-                  <p>Ruby / Ruby on Rails / MySQL / GitHub / Heroku / Visual Studio Code / Trello</p>
+                  <!-- <p>Ruby / Ruby on Rails / MySQL / GitHub / Render / Visual Studio Code / Trello</p>
                 </div>
                 <div class="p-work-others__item-btn-block">
                   <a href="01.html" class="button">More</a>
                 </div>
-              </li>
+              </li> -->
               <li class="p-work-others__item">
                 <div class="p-work-others__item-pict">
                   <!-- images/02に配置した、オリジナルアプリの画像（PC版）のパスを記載する -->
-                  <a href="02.html" style="background-image:url('../images/work/02/pict-work02-firstview_pc.jpg');"></a>
+                  <a href="02.html" style="background-image:url('../images/work/02/pict-work02-firstview_sp2.png');"></a>
                 </div>
                 <div class="p-work-others__item-text-block">
                   <!-- 記載番号：17 -->
-                  <h3>HOBCHA（趣味共有SNS）</h3>
+                  <h3>yumegurism</h3>
                   <!-- 記載番号：18 -->
-                  <p>Ruby / Ruby on Rails / MySQL / GitHub / Heroku / Visual Studio Code / Trello</p>
+                  <p>Ruby / Ruby on Rails / MySQL / GitHub / Render / Visual Studio Code / Trello</p>
                 </div>
                 <div class="p-work-others__item-btn-block">
                   <a href="02.html" class="button">More</a>
@@ -230,7 +213,7 @@
       </section>
     </main>
     <!-- 記載番号：1 -->
-    <footer id="footer" class="footer"><p>&copy; Taro Tech.</p></footer>
+    <footer id="footer" class="footer"><p>&copy; Yudai Ishiyama.</p></footer>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>
     <script type="text/javascript" src="../js/ofi.min.js"></script>
     <script type="text/javascript" src="../js/script.js"></script>
